# python-skeleton

./: README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
tests/: test_sample.py
