[tool.poetry]
name = "python-skeleton"
version = "0.2.0"
description = ""
authors = ["RoboticsY <robotics.yuta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "ALL"
]
ignore = [
    "E501",  # Line too long
]
exclude = [
    "tests/*",
    "build/*",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pylint]
max-args = 10
